platform/components/headlamp/base/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: headlamp
  labels:
    istio-injection: enabled
